SKeycloak auth and user registration